--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
-include ':core'
+include ':fotoapparat'
+
+include ':fotoapparat-adapters:rxjava'
+include ':fotoapparat-adapters:rxjava2'
+
+include ':sample'
