--- a/fotoapparat/build.gradle
+++ b/fotoapparat/build.gradle
@@ -6,12 +6,12 @@ group = 'com.github.MarcBS'
 version = '2.7.0'
 
 android {
-    buildToolsVersion versions.android.buildTools
-    compileSdkVersion versions.sdk.target
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        minSdkVersion versions.sdk.minimum
-        targetSdkVersion versions.sdk.target
+        minSdkVersion 14
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -30,13 +30,13 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:${versions.android.annotation}"
-    implementation "androidx.exifinterface:exifinterface:${versions.android.exifinterface}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation "androidx.exifinterface:exifinterface:1.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
-    testImplementation "junit:junit:${versions.test.junit}"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:${versions.kotlin}"
-    testImplementation "org.mockito:mockito-core:${versions.test.mockito}"
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.3.50"
+    testImplementation "org.mockito:mockito-core:2.23.0"
 }
 
 ext {
